--- a/app/src/main/res/layout/task_detail.xml
+++ b/app/src/main/res/layout/task_detail.xml
@@ -4,27 +4,62 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!-- TextViews to display task details -->
-    <TextView
-        android:id="@+id/textViewTaskTitleDetail"
-        android:layout_width="match_parent"
+    <!-- LinearLayout to wrap EditText -->
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:padding="16dp" />
+        android:layout_gravity="center_horizontal">
 
-    <TextView
-        android:id="@+id/textViewTaskDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:padding="16dp" />
+        <!-- EditText to edit task title -->
+        <EditText
+            android:id="@+id/editTextTaskTitleDetail"
+            android:layout_width="400dp"
+            android:layout_height="wrap_content"
+            android:autofillHints="no"
+            android:hint="@string/title"
+            android:inputType="text"
+            android:padding="16dp"
+            android:textColor="@color/text"
+            android:textSize="18sp" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/textViewDueDate"
-        android:layout_width="match_parent"
+    <!-- LinearLayout to wrap EditText -->
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:padding="16dp" />
+        android:layout_gravity="center_horizontal">
+
+        <!-- EditText to edit task description -->
+        <EditText
+            android:id="@+id/editTextTaskDescription"
+            android:layout_width="400dp"
+            android:layout_height="wrap_content"
+            android:autofillHints="no"
+            android:hint="@string/description"
+            android:inputType="text"
+            android:padding="16dp"
+            android:textColor="@color/text"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+    <!-- LinearLayout to wrap EditText -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+
+        <!-- EditText to edit task due date -->
+        <EditText
+            android:id="@+id/editTextDueDate"
+            android:layout_width="400dp"
+            android:layout_height="wrap_content"
+            android:autofillHints="no"
+            android:hint="@string/due_date"
+            android:inputType="date"
+            android:padding="16dp"
+            android:textColor="@color/text"
+            android:textSize="14sp" />
+    </LinearLayout>
 
     <!-- Button to delete the task -->
     <Button
