--- a/app/src/main/res/layout/task_detail.xml
+++ b/app/src/main/res/layout/task_detail.xml
@@ -20,9 +20,11 @@
             android:hint="@string/title"
             android:inputType="text"
             android:padding="16dp"
-            android:textColor="@color/text"
-            android:textColorHint="@color/hint"
             android:textSize="18sp" />
+
+        <!--            android:textColor="@color/text"-->
+        <!--            android:textColorHint="@color/hint"-->
+
     </LinearLayout>
 
     <!-- LinearLayout to wrap EditText -->
@@ -41,7 +43,7 @@
             android:hint="@string/description"
             android:inputType="text"
             android:padding="16dp"
-            android:textSize="12sp" />
+            android:textSize="14sp" />
     </LinearLayout>
 
     <!-- LinearLayout to wrap EditText -->
@@ -50,16 +52,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal">
 
-        <!-- EditText to edit task due date -->
-        <DatePicker
-            android:id="@+id/datePickerDueDate"
+        <!-- Button to show the date picker -->
+        <Button
+            android:id="@+id/buttonShowDatePicker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:autofillHints="no"
-            android:hint="@string/due_date"
-            android:inputType="date"
-            android:padding="16dp"
-            android:textSize="14sp" />
+            android:text="@string/select_date" />
+
     </LinearLayout>
 
     <LinearLayout
