--- a/app/src/main/res/layout/task_row.xml
+++ b/app/src/main/res/layout/task_row.xml
@@ -11,6 +11,7 @@
         android:textSize="24sp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        android:textColor="@color/color2_700"
         android:padding="8dp" />
+
+<!--    android:textColor="@color/color2_700"-->
 </LinearLayout>
