--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,4 +4,8 @@
         android:id="@+id/nav_login"
         android:icon="@drawable/ic_login"
         android:title="@string/login" />
+    <item
+        android:id="@+id/nav_logout"
+        android:icon="@drawable/ic_logout"
+        android:title="@string/logout" />
 </menu>
