--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -1,83 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/ad_view_container">
 
-        <RelativeLayout
+        <!-- RecyclerView to display tasks -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewTasks"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+        <!-- FloatingActionButton to add a new task -->
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabAddTask"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/add_task"
+            android:src="@drawable/ic_add"
+            app:layout_constraintBottom_toBottomOf="@+id/recyclerViewTasks"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.9"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/recyclerViewTasks"
+            app:layout_constraintVertical_bias="0.95" />
 
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_above="@+id/ad_view_container">
-
-                <!-- RecyclerView to display tasks -->
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerViewTasks"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-                <!-- FloatingActionButton to add a new task -->
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/fabAddTask"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:contentDescription="@string/add_task"
-                    android:src="@drawable/ic_add"
-                    app:layout_constraintBottom_toBottomOf="@+id/recyclerViewTasks"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.9"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/recyclerViewTasks"
-                    app:layout_constraintVertical_bias="0.95" />
-
-                <!--    android:backgroundTint="@color/button"-->
-                <!--    app:tint="@color/text_button"-->
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <FrameLayout
-                android:id="@+id/ad_view_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerInParent="true" />
-
-            <!--    <com.google.android.gms.ads.AdView-->
-            <!--        android:id="@+id/adView"-->
-            <!--        android:layout_width="wrap_content"-->
-            <!--        android:layout_height="wrap_content"-->
-            <!--        android:layout_alignParentBottom="true"-->
-            <!--        android:layout_centerHorizontal="true"-->
-            <!--        ads:adSize="BANNER"-->
-            <!--        ads:adUnitId="ca-app-pub-5163472824682213~4420222935">-->
-
-            <!--    </com.google.android.gms.ads.AdView>-->
-
-
-</RelativeLayout>
+        <!--    android:backgroundTint="@color/button"-->
+        <!--    app:tint="@color/text_button"-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <include layout="@layout/app_bar_main" />
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:menu="@menu/activity_main_drawer" />
-
-</androidx.drawerlayout.widget.DrawerLayout>
-
-
-
-
+</androidx.constraintlayout.widget.ConstraintLayout>
