--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Theme.MyTasks" parent="Theme.Material3.DayNight.NoActionBar">
+<!--        <item name="colorError">@color/colorError</item>-->
+<!--        <item name="colorOnError">@color/colorOnError</item>-->
     </style>
 
 </resources>
