--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -7,8 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/ad_view_container">
+        android:layout_height="match_parent">
 
         <!-- RecyclerView to display tasks -->
         <androidx.recyclerview.widget.RecyclerView
