--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
 
             <!-- Tasks -->
             <include
-                layout="@layout/activity_tasks"
+                layout="@layout/fragment_tasks"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_above="@id/ad_view_container"
