--- a/app/src/main/res/layout/task_row.xml
+++ b/app/src/main/res/layout/task_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -11,7 +12,8 @@
         android:textSize="24sp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        android:padding="8dp" />
+        android:padding="8dp"
+        tools:text="Sample Task Title" />
 
 <!--    android:textColor="@color/color2_700"-->
 </LinearLayout>
