TaskManager, TaskViewHolder, TaskDetail and TasksFragment deleted.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
         android:id="@+id/recyclerViewTasks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/task_row" />
+        tools:listitem="@layout/item_task" />
 
     <!-- FloatingActionButton to add a new task -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
