--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,6 +24,9 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/add_task"
         android:src="@drawable/ic_add"
+        app:tint="@color/text_button"
+        app:rippleColor="@color/ripple"
+        android:backgroundTint="@color/button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
