--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,31 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 <!--    FollowApp Color Palette -->
-<!--    <color name="color2_50">#f9fbe7</color>-->
+    <color name="color2_50">#f9fbe7</color>
     <color name="color2_100">#f0f4c3</color>
     <color name="color2_300">#dce775</color>
-<!--    <color name="color2_500">#c0ca33</color>-->
-<!--    <color name="color2_700">#827717</color>-->
-<!--    <color name="color2_900">#414503</color>-->
-<!--    <color name="color2_950">#272900</color>-->
+    <color name="color2_500">#c0ca33</color>
+    <color name="color2_700">#827717</color>
+    <color name="color2_900">#414503</color>
+    <color name="color2_950">#272900</color>
+    <color name="colorError">#B3261E</color>
 
-<!--    Standardizing color naming for this app-->
-<!--    <color name="color_50">@color/color2_50</color>-->
+
+    <!--    Standardizing color naming for this app-->
+    <color name="color_50">@color/color2_50</color>
     <color name="color_100">@color/color2_100</color>
     <color name="color_300">@color/color2_300</color>
-<!--    <color name="color_500">@color/color2_500</color>-->
-<!--    <color name="color_700">@color/color2_700</color>-->
-<!--    <color name="color_900">@color/color2_900</color>-->
-<!--    <color name="color_950">@color/color2_950</color>-->
+    <color name="color_500">@color/color2_500</color>
+    <color name="color_700">@color/color2_700</color>
+    <color name="color_900">@color/color2_900</color>
+    <color name="color_950">@color/color2_950</color>
 
 <!--    Standard color references-->
-<!--    <color name="text">@color/color_950</color>-->
-<!--    <color name="hint">@color/color_900</color>-->
-<!--    <color name="button">@color/color_900</color>-->
-<!--    <color name="text_button">@color/color_100</color>-->
+    <color name="text">@color/color_950</color>
+    <color name="textHint">@color/color_700</color>
+    <color name="button">@color/color_900</color>
+    <color name="text_button">@color/color_100</color>
     <color name="background">@color/color_100</color>
-<!--    <color name="line">@color/color_50</color>-->
+    <color name="line">@color/color_50</color>
 
-<!--    <color name="colorError">#B00020</color>-->
-<!--    <color name="colorOnError">#FFFFFF</color>-->
+    <color name="primary">@color/color_700</color>
+    <color name="primaryDark">@color/color_900</color>
+    <color name="accent">@color/color_500</color>
+    <color name="primaryVariant">@color/color_900</color>
+    <color name="secondary">@color/color_300</color>
+    <color name="secondaryVariant">@color/color_500</color>
+    <color name="onSecondary">@color/color_950</color>
+    <color name="ripple">@color/color_950</color>
 </resources>
