--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
@@ -44,6 +43,12 @@
             style="@style/Content" />
 
         <!-- Button to show the date picker -->
+        <CheckBox
+            android:id="@+id/checkBoxDone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/done" />
+
         <Button
             android:id="@+id/buttonShowDatePicker"
             style="@style/Widget.Material3.Button.TonalButton"
