--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,23 +20,23 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <!-- App Bar -->
-<!--            <include-->
-<!--                android:id="@+id/app_bar_main"-->
-<!--                layout="@layout/app_bar_main"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content" />-->
+            <!--            <include-->
+            <!--                android:id="@+id/app_bar_main"-->
+            <!--                layout="@layout/app_bar_main"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content" />-->
 
             <!-- Fragment Container -->
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/fragment_container_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@id/ad_view_container"
+                android:layout_above="@id/ad_fragment_container"
                 tools:layout="@layout/fragment_home" />
 
             <!-- Ads -->
             <FrameLayout
-                android:id="@+id/ad_view_container"
+                android:id="@+id/ad_fragment_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true" />
