--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_above="@+id/ad_fragment_container"
+    android:layout_below="@id/app_bar_main"
     tools:context=".homeModule.view.HomeFragment"
     tools:showIn="@layout/activity_main">
 
